--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/animalsdb
+spring.datasource.url=jdbc:mysql://localhost:3306/musicdb
 spring.datasource.username=root
 spring.datasource.password=password01
 
